# data-engineering-prj-final

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bootstrap.ps1  env--local-instructions.txt  pyproject.toml  validate-code.ps1
.dbt/: .user.yml  profiles.yml
.github/workflows/: deploy-composer.yml
app/: entrypoint.py  main.py
app/core/: registry.py  runner.py
application/use_cases/: ingest_gtfs.py  ingest_lines.py  ingest_municipalities.py  ingest_routes.py  ingest_stops.py  ingest_vehicles.py  staging_vehicles.py
configs/: settings.py
dags/: pipeline.py
dbt/: dbt_project.yml  profiles.yml
documents/: relatorio_projeto_data_engineering.md
domain/cleaners/: base_cleaner_runner.py  lines_cleanser.py  municipalities_cleanser.py  routes_cleanser.py  stops_cleanser.py
domain/normalizers/: gtfs_normalizer.py  lines_normalizer.py  municipalities_normalizer.py  routes_normalizer.py  stops_normalizer.py  vehicles_normalizer.py
domain/schemas/: gtfs_schemas.py  lines_schema.py  municipalities.py  municipalities_schema.py  routes_schema.py  stops.py  stops_schema.py  vehicle_schema.py
domain/services/: base_ingestion_services.py
infrastructure/api/: carris_client.py
infrastructure/logging/: logger.py
infrastructure/repositories/: bigquery_writer.py  generic_spark_repository.py
infrastructure/spark/: create_session_spark copy 2.py  create_session_spark copy.py  create_session_spark.py  gtfs_ingestor_spark.py  spark_singleton.py
infrastructure/storage/: gcs_uploader.py  parquet_storage.py  zip_storage.py
(+4 files in other folders)
